A successful drop doesn't always mean that the dragged icons are moved out of the folder, so always repaint the area occupied by the icons after a drag operation.

Patch by David Benjamin.
BUG: 164949

svn path=/trunk/KDE/kdebase/apps/; revision=824463